--- a/form.ui
+++ b/form.ui
@@ -28,8 +28,21 @@
       </property>
      </spacer>
     </item>
-    <item row="1" column="1">
-     <widget class="QPushButton" name="pushButton">
+    <item row="0" column="0" rowspan="3">
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Orientation::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="2" column="1">
+     <widget class="QPushButton" name="buttonApdateDB">
       <property name="enabled">
        <bool>true</bool>
       </property>
@@ -46,7 +59,7 @@
        </size>
       </property>
       <property name="text">
-       <string>тык</string>
+       <string>update</string>
       </property>
       <property name="icon">
        <iconset theme="QIcon::ThemeIcon::DocumentOpen"/>
@@ -59,18 +72,30 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="0" rowspan="2">
-     <spacer name="horizontalSpacer">
-      <property name="orientation">
-       <enum>Qt::Orientation::Horizontal</enum>
+    <item row="1" column="1">
+     <widget class="QPushButton" name="buttonChoiceLeng">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
       </property>
-      <property name="sizeHint" stdset="0">
+      <property name="minimumSize">
        <size>
-        <width>40</width>
-        <height>20</height>
+        <width>80</width>
+        <height>80</height>
        </size>
       </property>
-     </spacer>
+      <property name="text">
+       <string>Choice</string>
+      </property>
+      <property name="icon">
+       <iconset theme="QIcon::ThemeIcon::HelpFaq"/>
+      </property>
+      <property name="shortcut">
+       <string>Ctrl+L</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
