--- a/form.ui
+++ b/form.ui
@@ -190,6 +190,12 @@
       <property name="maximum">
        <number>100</number>
       </property>
+      <property name="pageStep">
+       <number>10</number>
+      </property>
+      <property name="value">
+       <number>50</number>
+      </property>
       <property name="orientation">
        <enum>Qt::Orientation::Horizontal</enum>
       </property>
