--- a/form.ui
+++ b/form.ui
@@ -186,18 +186,33 @@
      </layout>
     </item>
     <item>
-     <widget class="QSlider" name="horizontalSlider">
+     <widget class="QSlider" name="speedSlider">
+      <property name="minimum">
+       <number>1</number>
+      </property>
       <property name="maximum">
-       <number>100</number>
+       <number>200</number>
       </property>
       <property name="pageStep">
        <number>10</number>
       </property>
       <property name="value">
-       <number>50</number>
+       <number>100</number>
+      </property>
+      <property name="sliderPosition">
+       <number>100</number>
       </property>
       <property name="orientation">
        <enum>Qt::Orientation::Horizontal</enum>
+      </property>
+      <property name="invertedAppearance">
+       <bool>false</bool>
+      </property>
+      <property name="invertedControls">
+       <bool>false</bool>
+      </property>
+      <property name="tickPosition">
+       <enum>QSlider::TickPosition::NoTicks</enum>
       </property>
      </widget>
     </item>
