--- a/form.ui
+++ b/form.ui
@@ -158,7 +158,7 @@
            </size>
           </property>
           <property name="text">
-           <string>Choice</string>
+           <string>choice</string>
           </property>
           <property name="icon">
            <iconset theme="QIcon::ThemeIcon::HelpFaq"/>
